add cloudant ingestion and query
